--- a/index.html
+++ b/index.html
@@ -8,10 +8,8 @@
     <title>Document</title>
 </head>
 <body>
-<<<<<<< HEAD
-    <h1>Start start</h1>
-=======
-    <h1>Start Start Start</h1>
->>>>>>> master
+
+    <h1>Start Start</h1>
+
 </body>
 </html>
