--- a/index.html
+++ b/index.html
@@ -9,7 +9,25 @@
 </head>
 <body>
 
-    <h1>Start Start</h1>
+    <header>
+        <nav>
+            <input type="checkbox" id="checkbox-menu">
+            <label for="checkbox-menu">
+                <ul class="menu touch">
+                    <li><a class="logo" href="#">luxestate</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Apartment</a></li>
+                    <li><a href="#">How it works</a></li>
+                    <li><a href="#">Agents</a></li>
+                    <li><a class="contacts" href="#">Contact Us</a></li>
+                    <li><a href="#">Join us</a></li>
+                    <li><a href="#">Getting Started</a></li>
+                </ul>
+                <span class="toogle">☰</span>
+            </label>
+        </nav>
+    </header>
 
+    <script src="script.js"></script>
 </body>
 </html>
