--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <input type="checkbox" id="checkbox-menu">
             <label for="checkbox-menu">
                 <ul class="menu touch">
-                    <li><a class="logo" href="#">luxestate</a></li>
+                    <li><a class="logo" href="#">Yaskravo</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Apartment</a></li>
                     <li><a href="#">How it works</a></li>
