section 1, section adaptive

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/e3a13122ef.js" 
+    crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
 <body>
@@ -27,6 +29,20 @@
             </label>
         </nav>
     </header>
+    <main>
+        <section class="intro wrapper">
+            <div class="intro-img">
+                <p class="intro-text">Find Your New <br>
+                Modern Apartment</p>
+            </div>
+
+            <div class="intro-contacts">
+                <p><i class="fas fa-phone-alt"></i>(000) 1234-567</p<i class="fas fa-phone-alt"></i>
+                <p><i class="fas fa-map-marker-alt"></i>Mellbourne, Australia</p>
+            </div>
+
+        </section>
+    </main>
 
     <script src="script.js"></script>
 </body>
