stats adaptive stats

--- a/index.html
+++ b/index.html
@@ -40,7 +40,41 @@
                 <p><i class="fas fa-phone-alt"></i>(000) 1234-567</p<i class="fas fa-phone-alt"></i>
                 <p><i class="fas fa-map-marker-alt"></i>Mellbourne, Australia</p>
             </div>
-
+        </section>
+        <section class="stats wrapper">
+            <div class="stats-text">
+                <h2>Our's Company <br> Statistics</h2>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                    Iure provident tempora facilis odio rerum temporibus enim consectetur, 
+                    vitae repellendus ducimus, cum corrupti quas voluptatum nobis fugit hic 
+                    labore minus aliquam error! Ea?</p>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
+                        Iure provident tempora facilis odio rerum temporibus enim consectetur, 
+                        vitae repellendus ducimus, cum corrupti quas voluptatum nobis fugit hic 
+                        labore minus aliquam error! Ea?</p>
+            </div>
+            <div class="stats-num">
+                  <div class="stats-line">
+                      <div class="square">
+                          <span class="stats-square">7342</span>
+                          <span class="square-text">Appartment</span>
+                      </div>
+                      <div class="square">
+                        <span class="stats-square">7342</span>
+                        <span class="square-text">Appartment</span>
+                    </div>
+                  </div>
+                  <div class="stats-line">
+                    <div class="square">
+                        <span class="stats-square">7342</span>
+                        <span class="square-text">Appartment</span>
+                    </div>
+                    <div class="square">
+                      <span class="stats-square">7342</span>
+                      <span class="square-text">Appartment</span>
+                  </div>
+                </div>
+                </div>
         </section>
     </main>
 
