--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <p><i class="fas fa-map-marker-alt"></i>Mellbourne, Australia</p>
             </div>
         </section>
+
         <section class="stats wrapper">
             <div class="stats-text">
                 <h2>Our's Company <br> Statistics</h2>
@@ -75,6 +76,99 @@
                   </div>
                 </div>
                 </div>
+        </section>
+
+        <section class="apartments">
+            <div class="wrapper apart">
+                <h2>More than 500+ <br> Appartments for Rent</h2>
+                <div class="cards">
+                    <div class="card">
+                        <img src="img/001.jpg" alt="card">
+                        <div class="card-container">
+                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                            <div class="card-info">
+                                <div class="money">3500$</div>
+                                <div class="info">
+                                    <span><i class="fas fa-bed"></i>2BA</span>
+                                    <span><i class="fas fa-shower"></i>2BD</span>
+                                </div>    
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="card">
+                        <img src="img/001.jpg" alt="card">
+                        <div class="card-container">
+                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                            <div class="card-info">
+                                <div class="money">3500$</div>
+                                <div class="info">
+                                    <span><i class="fas fa-bed"></i>2BA</span>
+                                    <span><i class="fas fa-shower"></i>2BD</span>
+                                </div>    
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="card">
+                        <img src="img/001.jpg" alt="card">
+                        <div class="card-container">
+                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                            <div class="card-info">
+                                <div class="money">3500$</div>
+                                <div class="info">
+                                    <span><i class="fas fa-bed"></i>2BA</span>
+                                    <span><i class="fas fa-shower"></i>2BD</span>
+                                </div>    
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="card">
+                        <img src="img/001.jpg" alt="card">
+                        <div class="card-container">
+                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                            <div class="card-info">
+                                <div class="money">3500$</div>
+                                <div class="info">
+                                    <span><i class="fas fa-bed"></i>2BA</span>
+                                    <span><i class="fas fa-shower"></i>2BD</span>
+                                </div>    
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="card">
+                        <img src="img/001.jpg" alt="card">
+                        <div class="card-container">
+                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                            <div class="card-info">
+                                <div class="money">3500$</div>
+                                <div class="info">
+                                    <span><i class="fas fa-bed"></i>2BA</span>
+                                    <span><i class="fas fa-shower"></i>2BD</span>
+                                </div>    
+                            </div>
+                        </div> 
+                    </div>
+                    <div class="card">
+                        <img src="img/001.jpg" alt="card">
+                        <div class="card-container">
+                            <p>Lorem ipsum dolor sit amet consectetur.</p>
+                            <div class="card-info">
+                                <div class="money">3500$</div>
+                                <div class="info">
+                                    <span><i class="fas fa-bed"></i>2BA</span>
+                                    <span><i class="fas fa-shower"></i>2BD</span>
+                                </div>    
+                            </div>
+                        </div> 
+                    </div>
+                </div>
+                <div class="buttons-search">
+                    <form action="">
+                        <input type="text" placeholder="Search Location">
+                        <input type="submit" value="Search">
+                    </form>
+                    <button class="all">View all apartments</button>
+                </div>
+            </div>
         </section>
     </main>
 
