--- a/index.html
+++ b/index.html
@@ -170,6 +170,40 @@
                 </div>
             </div>
         </section>
+
+        <section class="steps">
+            <div class="wrapper">
+                <h2>How It Works</h2>
+                <p class="steps-text">Lorem ipsum dolor sit amet 
+                    consectetur adipisicing elit.</p>
+                <p class="steps-text mbtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                    <br> Est, placeat cumque.</p>
+                    <div class="steps-container">
+                        <div class="stepblock" id="stepbl1">
+                            <p class="step-num">01</p>
+                            <h4><span>01</span>Find your location</h4>
+                            <p class="step-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Molestias perspiciatis tempora accusamus autem? Asperiores.</p>
+                            <p class="stepinfolast" id="stepbrdr1">Find your location</p>
+                        </div>
+                        <div class="stepblock" id="stepbl2">
+                            <p class="step-num">02</p>
+                            <h4><span>02</span>Find your location</h4>
+                            <p class="step-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Molestias perspiciatis tempora accusamus autem? Asperiores.</p>
+                            <p class="stepinfolast" id="stepbrdr2">Find your location</p>
+                        </div>
+                        <div class="stepblock" id="stepbl3">
+                            <p class="step-num">03</p>
+                            <h4><span>03</span>Find your location</h4>
+                            <p class="step-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
+                                Molestias perspiciatis tempora accusamus autem? Asperiores.</p>
+                            <p class="stepinfolast" id="stepbrdr3">Find your location</p>
+                        </div>
+                    </div>
+            </div>
+
+        </section>
     </main>
 
     <script src="script.js"></script>
