--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
-    <script src="https://kit.fontawesome.com/e3a13122ef.js" 
-    crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/e3a13122ef.js" crossorigin="anonymous"></script>
     <title>Document</title>
 </head>
+
 <body>
 
     <header>
@@ -29,53 +30,47 @@
             </label>
         </nav>
     </header>
+
     <main>
         <section class="intro wrapper">
             <div class="intro-img">
-                <p class="intro-text">Find Your New <br>
-                Modern Apartment</p>
+                <p class="intro-text">Find Your New <br> Modern Apartment</p>
             </div>
 
             <div class="intro-contacts">
                 <p><i class="fas fa-phone-alt"></i>(000) 1234-567</p<i class="fas fa-phone-alt"></i>
-                <p><i class="fas fa-map-marker-alt"></i>Mellbourne, Australia</p>
+                    <p><i class="fas fa-map-marker-alt"></i>Mellbourne, Australia</p>
             </div>
         </section>
 
         <section class="stats wrapper">
             <div class="stats-text">
                 <h2>Our's Company <br> Statistics</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                    Iure provident tempora facilis odio rerum temporibus enim consectetur, 
-                    vitae repellendus ducimus, cum corrupti quas voluptatum nobis fugit hic 
-                    labore minus aliquam error! Ea?</p>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                        Iure provident tempora facilis odio rerum temporibus enim consectetur, 
-                        vitae repellendus ducimus, cum corrupti quas voluptatum nobis fugit hic 
-                        labore minus aliquam error! Ea?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure provident tempora facilis odio rerum temporibus enim consectetur, vitae repellendus ducimus, cum corrupti quas voluptatum nobis fugit hic labore minus aliquam error! Ea?</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iure provident tempora facilis odio rerum temporibus enim consectetur, vitae repellendus ducimus, cum corrupti quas voluptatum nobis fugit hic labore minus aliquam error! Ea?</p>
             </div>
             <div class="stats-num">
-                  <div class="stats-line">
-                      <div class="square">
-                          <span class="stats-square">7342</span>
-                          <span class="square-text">Appartment</span>
-                      </div>
-                      <div class="square">
-                        <span class="stats-square">7342</span>
-                        <span class="square-text">Appartment</span>
-                    </div>
-                  </div>
-                  <div class="stats-line">
+                <div class="stats-line">
                     <div class="square">
                         <span class="stats-square">7342</span>
                         <span class="square-text">Appartment</span>
                     </div>
                     <div class="square">
-                      <span class="stats-square">7342</span>
-                      <span class="square-text">Appartment</span>
-                  </div>
+                        <span class="stats-square">7342</span>
+                        <span class="square-text">Appartment</span>
+                    </div>
                 </div>
+                <div class="stats-line">
+                    <div class="square">
+                        <span class="stats-square">7342</span>
+                        <span class="square-text">Appartment</span>
+                    </div>
+                    <div class="square">
+                        <span class="stats-square">7342</span>
+                        <span class="square-text">Appartment</span>
+                    </div>
                 </div>
+            </div>
         </section>
 
         <section class="apartments">
@@ -91,9 +86,9 @@
                                 <div class="info">
                                     <span><i class="fas fa-bed"></i>2BA</span>
                                     <span><i class="fas fa-shower"></i>2BD</span>
-                                </div>    
+                                </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                     <div class="card">
                         <img src="img/001.jpg" alt="card">
@@ -104,9 +99,9 @@
                                 <div class="info">
                                     <span><i class="fas fa-bed"></i>2BA</span>
                                     <span><i class="fas fa-shower"></i>2BD</span>
-                                </div>    
+                                </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                     <div class="card">
                         <img src="img/001.jpg" alt="card">
@@ -117,9 +112,9 @@
                                 <div class="info">
                                     <span><i class="fas fa-bed"></i>2BA</span>
                                     <span><i class="fas fa-shower"></i>2BD</span>
-                                </div>    
+                                </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                     <div class="card">
                         <img src="img/001.jpg" alt="card">
@@ -130,9 +125,9 @@
                                 <div class="info">
                                     <span><i class="fas fa-bed"></i>2BA</span>
                                     <span><i class="fas fa-shower"></i>2BD</span>
-                                </div>    
+                                </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                     <div class="card">
                         <img src="img/001.jpg" alt="card">
@@ -143,9 +138,9 @@
                                 <div class="info">
                                     <span><i class="fas fa-bed"></i>2BA</span>
                                     <span><i class="fas fa-shower"></i>2BD</span>
-                                </div>    
+                                </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                     <div class="card">
                         <img src="img/001.jpg" alt="card">
@@ -156,9 +151,9 @@
                                 <div class="info">
                                     <span><i class="fas fa-bed"></i>2BA</span>
                                     <span><i class="fas fa-shower"></i>2BD</span>
-                                </div>    
+                                </div>
                             </div>
-                        </div> 
+                        </div>
                     </div>
                 </div>
                 <div class="buttons-search">
@@ -174,38 +169,54 @@
         <section class="steps">
             <div class="wrapper">
                 <h2>How It Works</h2>
-                <p class="steps-text">Lorem ipsum dolor sit amet 
-                    consectetur adipisicing elit.</p>
-                <p class="steps-text mbtext">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                <p class="steps-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <p class="steps-text mbtext">Lorem ipsum dolor sit amet consectetur adipisicing elit.
                     <br> Est, placeat cumque.</p>
-                    <div class="steps-container">
-                        <div class="stepblock" id="stepbl1">
-                            <p class="step-num">01</p>
-                            <h4><span>01</span>Find your location</h4>
-                            <p class="step-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                                Molestias perspiciatis tempora accusamus autem? Asperiores.</p>
-                            <p class="stepinfolast" id="stepbrdr1">Find your location</p>
-                        </div>
-                        <div class="stepblock" id="stepbl2">
-                            <p class="step-num">02</p>
-                            <h4><span>02</span>Find your location</h4>
-                            <p class="step-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                                Molestias perspiciatis tempora accusamus autem? Asperiores.</p>
-                            <p class="stepinfolast" id="stepbrdr2">Find your location</p>
-                        </div>
-                        <div class="stepblock" id="stepbl3">
-                            <p class="step-num">03</p>
-                            <h4><span>03</span>Find your location</h4>
-                            <p class="step-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. 
-                                Molestias perspiciatis tempora accusamus autem? Asperiores.</p>
-                            <p class="stepinfolast" id="stepbrdr3">Find your location</p>
-                        </div>
+                <div class="steps-container">
+                    <div class="stepblock" id="stepbl1">
+                        <p class="step-num">01</p>
+                        <h4><span>01</span>Find your location</h4>
+                        <p class="step-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias perspiciatis tempora accusamus autem? Asperiores.</p>
+                        <p class="stepinfolast" id="stepbrdr1">Find your location</p>
                     </div>
+                    <div class="stepblock" id="stepbl2">
+                        <p class="step-num">02</p>
+                        <h4><span>02</span>Find your location</h4>
+                        <p class="step-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias perspiciatis tempora accusamus autem? Asperiores.</p>
+                        <p class="stepinfolast" id="stepbrdr2">Find your location</p>
+                    </div>
+                    <div class="stepblock" id="stepbl3">
+                        <p class="step-num">03</p>
+                        <h4><span>03</span>Find your location</h4>
+                        <p class="step-info">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Molestias perspiciatis tempora accusamus autem? Asperiores.</p>
+                        <p class="stepinfolast" id="stepbrdr3">Find your location</p>
+                    </div>
+                </div>
             </div>
 
         </section>
+        <section class="services wrapper">
+            <h2>Services</h2>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <p>Lorem ipsum dolor sit amet.</p>
+            <div class="serv-container">
+                <div class="serv-img-container">
+                    <img src="img/003.jpg" alt="home">
+                </div>
+                <div class="serv-text">
+                    <h4>Renting</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, nam asperiores? Consequuntur impedit necessitatibus voluptatibus aut expedita, consectetur suscipit voluptatum quia delectus nihil?</p>
+                    <h4>Renting</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, nam asperiores? Consequuntur impedit necessitatibus voluptatibus aut expedita, consectetur suscipit voluptatum quia delectus nihil?</p>
+                    <h4>Renting</h4>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eligendi, nam asperiores? Consequuntur impedit necessitatibus voluptatibus aut expedita, consectetur suscipit voluptatum quia delectus nihil?</p>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <script src="script.js"></script>
 </body>
+
 </html>
