--- a/index.html
+++ b/index.html
@@ -214,6 +214,19 @@
             </div>
         </section>
 
+        <section class="agents">
+            <div class="wrapper">
+                <h2>Meet our agents</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repudiandae, dolores!</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Optio, nesciunt perspiciatis!</p>
+                <div class="agent-cards">
+                    <div class="agent-card">
+                        <img src="img/004.jpg" alt="agent">
+                    </div>
+                </div>
+            </div>
+        </section>
+
     </main>
 
     <script src="script.js"></script>
