--- a/index.html
+++ b/index.html
@@ -222,7 +222,41 @@
                 <div class="agent-cards">
                     <div class="agent-card">
                         <img src="img/004.jpg" alt="agent">
+                        <p>Agent</p>
+                        <div class="agent-block">
+                            <p class="agent-name">Mr. Smith</p>
+                            <div class="social">
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-facebook"></i></a>
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
                     </div>
+                    <div class="agent-card">
+                        <img src="img/004.jpg" alt="agent">
+                        <p>Agent</p>
+                        <div class="agent-block">
+                            <p class="agent-name">Mr. Smith</p>
+                            <div class="social">
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-facebook"></i></a>
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="agent-card">
+                        <img src="img/004.jpg" alt="agent">
+                        <p>Agent</p>
+                        <div class="agent-block">
+                            <p class="agent-name">Mr. Smith</p>
+                            <div class="social">
+                                <a href="#"><i class="fab fa-twitter"></i></a>
+                                <a href="#"><i class="fab fa-facebook"></i></a>
+                                <a href="#"><i class="fab fa-instagram"></i></a>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
             </div>
         </section>
