--- a/index.html
+++ b/index.html
@@ -256,10 +256,53 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </section>
+
+        <section class="add wrapper">
+            <div class="add-line">
+                <div class="line-img">
+                    <img src="img/005.jpg" alt="apartments">
+                    <div class="location location-melbourne">
+                        <i class="fas fa-map-marker-alt"></i> Melbourne,Australia
+                    </div>
+                </div>
+                <div class="line-text">
+                    <h3>Super Awesome Add</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nulla consectetur atque doloribus architecto corrupti modi, cumque nesciunt consequuntur aspernatur maxime totam et saepe quae suscipit cum iste velit accusantium quo at
+                        neque quod voluptates?</p>
+                </div>
+            </div>
+
+            <div class="add-line add-line-right">
+                <div class="line-text">
+                    <h3>Super Awesome Add</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nulla consectetur atque doloribus architecto corrupti modi, cumque nesciunt consequuntur aspernatur maxime totam et saepe quae suscipit cum iste velit accusantium quo at
+                        neque quod voluptates?</p>
+                </div>
+                <div class="line-img">
+                    <img src="img/005.jpg" alt="apartments">
+                    <div class="location location-australia">
+                        <i class="fas fa-map-marker-alt"></i> Melbourne,Australia
+                    </div>
+                </div>
+            </div>
+
+            <div class="add-line">
+                <div class="line-img">
+                    <img src="img/005.jpg" alt="apartments">
+
+                </div>
+                <div class="line-text">
+                    <h3>Super Awesome Add</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nulla consectetur atque doloribus architecto corrupti modi, cumque nesciunt consequuntur aspernatur maxime totam et saepe quae suscipit cum iste velit accusantium quo at
+                        neque quod voluptates?</p>
+                    <div class="show-more">Show me more</div>
+                </div>
+            </div>
+        </section>
+
 
     </main>
 
