--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
             <div class="add-line add-line-right">
                 <div class="line-text">
                     <h3>Super Awesome Add</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nulla consectetur atque doloribus architecto corrupti modi, cumque nesciunt consequuntur aspernatur maxime totam et saepe quae suscipit cum iste velit accusantium quo at
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nulla consectetur atque doloribus architecto corrupti modi, umque nesciunt consequuntur aspernatur maxime totam et saepe quae suscipit cum iste velit accusantium quo at
                         neque quod voluptates?</p>
                 </div>
                 <div class="line-img">
@@ -296,15 +296,54 @@
                 </div>
                 <div class="line-text">
                     <h3>Super Awesome Add</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nulla consectetur atque doloribus architecto corrupti modi, cumque nesciunt consequuntur aspernatur maxime totam et saepe quae suscipit cum iste velit accusantium quo at
-                        neque quod voluptates?</p>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis nulla consectetur atque doloribus architecto corrupti modi, cumque nesciunt consequuntur aspernatur maxime totam et saepe quae suscipit cum iste </p>
                     <div class="show-more">Show me more</div>
                 </div>
             </div>
         </section>
-
-
     </main>
+    <footer>
+        <div class="wrapper">
+            <div class="footer-block">
+                <div class="footer-logo">
+                    <h3>Yaskravo</h3>
+                    <h3>Explore Real Estate</h3>
+                </div>
+                <div class="footer-search">
+                    <input type="text" placeholder="Subscribe">
+                </div>
+            </div>
+            <hr>
+            <div class="footer-links">
+                <div class="footer-links-logo">
+                    <h4>Yaskravo</h4>
+                </div>
+                <div class="footer-link">
+                    <p>Yaskravo</p>
+                    <a href="#">Agents</a>
+                    <a href="#">Hunters</a>
+                    <a href="#">Agents</a>
+                    <a href="#">Hunters</a>
+                </div>
+                <div class="footer-link">
+                    <p>Yaskravo</p>
+                    <a href="#">Agents</a>
+                    <a href="#">Hunters</a>
+                    <a href="#">Hunters</a>
+                </div>
+                <div class="footer-link">
+                    <p>Yaskravo</p>
+                    <a href="#">Agents</a>
+                    <a href="#">Hunters</a>
+                </div>
+                <div class="footer-link">
+                    <p>Yaskravo</p>
+                    <a href="#">Agents</a>
+                    <a href="#">Hunters</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="script.js"></script>
 </body>
